cmake_minimum_required(VERSION 3.23)
project(Algorithm)

set(CMAKE_CXX_STANDARD 17)

#add_executable(Algorithm main.cpp bronze/num14489.cpp)
#add_executable(Algorithm bronze/num14489.cpp bronze/num10808.cpp)
#add_executable(Algorithm bronze/num10808.cpp bronze/num2750.cpp)
#add_executable(Algorithm bronze/num2750.cpp)
#add_executable(Algorithm bronze/num2338.cpp)
#add_executable(Algorithm dir/primeNumber.cpp silver/num1158.cpp)
#add_executable(Algorithm silver/num1158.cpp silver/num1015.cpp)
#add_executable(Algorithm silver/num1158.cpp silver/ttadsa.cpp)
#add_executable(Algorithm silver/ttadsa.cpp silver/num11399.cpp)
#add_executable(Algorithm silver/num11399.cpp level0/minV.cpp)
#add_executable(Algorithm level0/pizza2.cpp level0/sevenCount.cpp)
#add_executable(Algorithm level0/sevenCount.cpp)
add_executable(Algorithm level0/nextNumber.cpp)